--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
+    <h1>{{ user_name }}</h1>
+    <form action="{{ url_for('logout') }}">
+        <input type="submit" value="Log Out">
+    </form>
+
     <ul>
         <li><a href="{{ url_for('upload_form') }}">File Upload</a></li>
         <li><a href="{{ url_for('image_form') }}">Image Transform</a></li>
