--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,14 +1,76 @@
-{% extends "base.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Bootstrap Case</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style type="text/css">
+        body {
+            background: black !important;
+            padding: 30px;
+        }
 
-    <h1>{{ user_name }}</h1>
-    <form action="{{ url_for('logout') }}">
-        <input type="submit" value="Log Out">
-    </form>
+        img {
+            max-height: 100% !important;
+        }
+    </style>
+</head>
+<body>
 
-    <ul>
-        <li><a href="{{ url_for('upload_form') }}">File Upload</a></li>
-        <li><a href="{{ url_for('image_form') }}">Image Transform</a></li>
-    </ul>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">ECE1779 A1</a>
+        </div>
+        <button class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#myModal">Upload Image</button>
+        <ul class="nav navbar-nav navbar-right">
+            <li><p class="navbar-text"><span class="glyphicon glyphicon-user"></span> {{ user_name }} </p></li>
+            <li><a href="{{ url_for('logout') }}"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
+        </ul>
+    </div>
+</nav>
 
-{% endblock %}
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <form action="{{ url_for('file_upload') }}" enctype="multipart/form-data" method="post">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Choose a new image to upload</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-inline">
+                        <div class="form-group">
+                            <input type="file" name="uploadedfile"><br/>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Upload</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid" style="margin-top:50px">
+    <div class="row">
+        {% for image in image_list %}
+            <div class="col-md-3">
+                <div class="thumbnail text-center" style="background:black">
+                    <a href="#">
+                        <img src="{{ image }}">
+                    </a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</div>
+</body>
+</html>
