improve personal page

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -63,9 +63,9 @@
     <div class="row">
         {% for image in image_list %}
             <div class="col-md-3">
-                <div class="thumbnail text-center" style="background:black">
+                <div class="thumbnail" style="background:black">
                     <a href="#">
-                        <img src="{{ image }}">
+                        <img src="{{ image }}" style="width: 100%">
                     </a>
                 </div>
             </div>
