--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -73,6 +73,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel-footer text-center">
+                    {{ error if error != None }}
+                </div>
             </div>
         </div>
     </div>
