add another entry point for uploading

--- a/app/templates/fileupload/form.html
+++ b/app/templates/fileupload/form.html
@@ -6,6 +6,7 @@
 
 <body>
 <h1>uploadForm</h1>
+{{ error if error != None }}
 <form action="/test/FileUpload" enctype="multipart/form-data" method="post">
     User ID <input type="text" name="userID"><br/>
     Password <input type="text" name="password"><br/>
