--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Case</title>
+    <title>View</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -39,9 +39,7 @@
         {% for image in image_list %}
             <div class="col-md-6">
                 <div class="thumbnail" style="background:black">
-                    <a href="#">
-                        <img src="{{ image }}" style="width: 100%">
-                    </a>
+                    <img src="{{ image }}" style="width: 100%">
                 </div>
             </div>
         {% endfor %}
