--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -36,7 +36,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="radio">
-                        <label><input type="radio" name="manual">Manually setting worker pool</label>
+                        <label><input type="radio" name="manual" checked>Manually setting worker pool</label>
                     </div>
                 </div>
                 <div class="panel-body">
