--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -88,11 +88,11 @@
                         <div class="form-group">
                             <label for="auto1">CPU threshold for growing worker pool:</label>
                             <select class="form-control" id="auto1" name="cpu-grow" disabled>
-                                <option>90%</option>
-                                <option>80%</option>
-                                <option>70%</option>
-                                <option>60%</option>
-                                <option>50%</option>
+                                <option value="90">90%</option>
+                                <option value="80">80%</option>
+                                <option value="70">70%</option>
+                                <option value="60">60%</option>
+                                <option value="50">50%</option>
                             </select>
                         </div>
                     </form>
@@ -100,11 +100,11 @@
                         <div class="form-group">
                             <label for="auto2">CPU threshold for shrinking worker pool:</label>
                             <select class="form-control" id="auto2" name="cpu-shrink" disabled>
-                                <option>10%</option>
-                                <option>20%</option>
-                                <option>30%</option>
-                                <option>40%</option>
-                                <option>50%</option>
+                                <option value="10">10%</option>
+                                <option value="20">20%</option>
+                                <option value="30">30%</option>
+                                <option value="40">40%</option>
+                                <option value="50">50%</option>
                             </select>
                         </div>
                     </form>
@@ -112,9 +112,9 @@
                         <div class="form-group">
                             <label for="auto3">Ratio by which to expand the worker pool:</label>
                             <select class="form-control" id="auto3" name="ratio-expand" disabled>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
                             </select>
                         </div>
                     </form>
@@ -122,9 +122,9 @@
                         <div class="form-group">
                             <label for="auto4">Ratio by which to shrink the worker pool:</label>
                             <select class="form-control" id="auto4" name="ratio-shrink" disabled>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
                             </select>
                         </div>
                     </form>
