--- a/master_app/templates/admin.html
+++ b/master_app/templates/admin.html
@@ -61,7 +61,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <input id="destroyWorker" type="submit" class="btn btn-warning" value="Destroy">
+                            <input id="destroyWorker" type="submit" class="btn btn-info" value="Destroy">
                         </div>
                     </form>
                 </div>
@@ -126,6 +126,9 @@
                     </form>
                 </div>
             </div>
+            <form action="{{ url_for('delete_all_images') }}" method='post' onsubmit='return confirm("Are you sure?")'>
+                <input type="submit" class="btn btn-warning btn-block" value="Delete all user images">
+            </form>
         </div>
         <div class="col-md-9">
             {% for i in range(cpu_stats|length) %}
