--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,10 +7,29 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='login.css') }}">
+    <style>
+        html, body, .container-table {
+            height: 100%;
+        }
+
+        body {
+            background-color: #ffcc80;
+            padding: 0;
+        }
+
+        .container-table {
+            display: table;
+        }
+
+        .vertical-center-row {
+            display: table-cell;
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-    <div class="row">
+<div class="container container-table">
+    <div class="row vertical-center-row">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-login">
                 <div class="panel-heading">
@@ -30,7 +49,8 @@
                             <form id="login-form" action="{{ url_for('login') }}" method="post" role="form"
                                   style="display: block;">
                                 <div class="form-group">
-                                    <input type="text" name="username" id="username" tabindex="1" class="form-control"
+                                    <input type="text" name="username" id="username" tabindex="1"
+                                           class="form-control"
                                            placeholder="Username" value="">
                                 </div>
                                 <div class="form-group">
@@ -49,7 +69,8 @@
                             <form id="register-form" action="{{ url_for('register') }}" method="post"
                                   role="form" style="display: none;">
                                 <div class="form-group">
-                                    <input type="text" name="username" id="username" tabindex="1" class="form-control"
+                                    <input type="text" name="username" id="username" tabindex="1"
+                                           class="form-control"
                                            placeholder="Username" value="">
                                 </div>
                                 <div class="form-group">
@@ -57,7 +78,8 @@
                                            class="form-control" placeholder="Password">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" name="confirm_password" id="confirm_password" tabindex="2"
+                                    <input type="password" name="confirm_password" id="confirm_password"
+                                           tabindex="2"
                                            class="form-control" placeholder="Confirm Password">
                                 </div>
                                 <div class="form-group">
