--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -61,12 +61,12 @@
 
 <div class="container-fluid" style="margin-top:50px">
     <div class="row">
-        {% for image in image_list %}
+        {% for key, url in image_list %}
             <div class="col-md-3">
                 <div class="thumbnail" style="background:black">
-                    <form id="viewForm" action="{{ url_for('image_view') }}" method="post">
-                        <input type="hidden" name="key" value="{{ image }}">
-                        <input type="image" src="{{ image }}" style="width: 100%"/>
+                    <form action="{{ url_for('image_view') }}" method="post">
+                        <input type="hidden" name="key" value="{{ key }}">
+                        <input type="image" src="{{ url }}" style="width: 100%"/>
                     </form>
                 </div>
             </div>
