--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -13,8 +13,54 @@
             padding: 30px;
         }
 
-        img {
-            max-height: 100% !important;
+        #photos {
+            /* Prevent vertical gaps */
+            line-height: 0;
+
+            -webkit-column-count: 5;
+            -webkit-column-gap: 0;
+            -moz-column-count: 5;
+            -moz-column-gap: 0;
+            column-count: 5;
+            column-gap: 0;
+        }
+
+        #photos .img {
+            /* Just in case there are inline attributes */
+            width: 100% !important;
+            height: auto !important;
+        }
+
+        @media (max-width: 1200px) {
+            #photos {
+                -moz-column-count: 4;
+                -webkit-column-count: 4;
+                column-count: 4;
+            }
+        }
+
+        @media (max-width: 1000px) {
+            #photos {
+                -moz-column-count: 3;
+                -webkit-column-count: 3;
+                column-count: 3;
+            }
+        }
+
+        @media (max-width: 800px) {
+            #photos {
+                -moz-column-count: 2;
+                -webkit-column-count: 2;
+                column-count: 2;
+            }
+        }
+
+        @media (max-width: 400px) {
+            #photos {
+                -moz-column-count: 1;
+                -webkit-column-count: 1;
+                column-count: 1;
+            }
         }
     </style>
 </head>
@@ -59,19 +105,16 @@
     </div>
 </div>
 
-<div class="container-fluid" style="margin-top:50px">
-    <div class="row">
+
+<div style="margin-top:50px">
+    <section id="photos">
         {% for key, url in image_list %}
-            <div class="col-md-3">
-                <div class="thumbnail" style="background:black">
-                    <form action="{{ url_for('image_view') }}" method="post">
-                        <input type="hidden" name="key" value="{{ key }}">
-                        <input type="image" src="{{ url }}" style="width: 100%"/>
-                    </form>
-                </div>
-            </div>
+            <form action="{{ url_for('image_view') }}" method="post">
+                <input type="hidden" name="key" value="{{ key }}">
+                <input class="img" type="image" src="{{ url }}"/>
+            </form>
         {% endfor %}
-    </div>
+    </section>
 </div>
 </body>
 </html>
