--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,28 +8,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='login.css') }}">
     <style>
-        html, body, .container-table {
-            height: 100%;
-        }
-
         body {
             background-color: #ffcc80;
-            padding: 0;
-        }
-
-        .container-table {
-            display: table;
-        }
-
-        .vertical-center-row {
-            display: table-cell;
-            vertical-align: middle;
         }
     </style>
 </head>
 <body>
-<div class="container container-table">
-    <div class="row vertical-center-row">
+<div class="container" style="padding:150px 0">
+    <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-login">
                 <div class="panel-heading">
