--- a/master_app/templates/admin.html
+++ b/master_app/templates/admin.html
@@ -9,6 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='flot/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='flot/jquery.flot.js') }}"></script>
+    <link rel="icon" href="{{ url_for('static',filename='favicon.png') }}">
     <style type="text/css">
         body {
             background: antiquewhite !important;
