--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -11,7 +11,6 @@
     <style type="text/css">
         body {
             background: black !important;
-            padding: 30px;
         }
 
         img {
@@ -21,21 +20,29 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
+
+<nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" href="#">ECE1779 A1</a>
         </div>
-        <button class="btn btn-primary navbar-btn" onclick="window.history.back()">Back</button>
-        <ul class="nav navbar-nav navbar-right">
-            <li><p class="navbar-text"><span class="glyphicon glyphicon-user"></span> {{ user_name }} </p></li>
-            <li><a href="{{ url_for('logout') }}"><span class="glyphicon glyphicon-log-in"></span>Log out</a></li>
-        </ul>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <button class="btn btn-primary navbar-btn" onclick="window.history.back()">Back</button>
+            <ul class="nav navbar-nav navbar-right">
+                <li><p class="navbar-text"><span class="glyphicon glyphicon-user"></span> {{ user_name }} </p></li>
+                <li><a href="{{ url_for('logout') }}"><span class="glyphicon glyphicon-log-in"></span> Log out </a></li>
+            </ul>
+        </div>
     </div>
 </nav>
 
 
-<div id='photos' class="container-fluid" style="margin-top:50px">
+<div id='photos' class="container-fluid" style="padding: 10px 30px 30px;">
     <div class="row">
         {% for image in image_list %}
             <div class="col-md-6">
