--- a/master_app/templates/admin.html
+++ b/master_app/templates/admin.html
@@ -13,17 +13,16 @@
     <style type="text/css">
         body {
             background: antiquewhite !important;
-            padding: 30px;
         }
     </style>
 </head>
 <body>
 
 
-<div class="container-fluid" style="margin-top:50px">
+<div class="container" style="margin-top: 30px;">
     <div class="row">
-        <div class="col-md-3">
-            <div class="panel panel-default" style="margin-top: 80px">
+        <div class="col-lg-4">
+            <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="radio">
                         <label>
@@ -76,7 +75,7 @@
                 <div class="panel-body">
                     <form class="form-inline">
                         <div class="form-group">
-                            <label for="auto1">CPU threshold for growing worker pool:</label>
+                            <label for="auto1">CPU threshold growing worker pool:</label>
                             <select class="form-control" id="auto1" name="cpu-grow" disabled>
                                 <option value="90">90%</option>
                                 <option value="80">80%</option>
@@ -91,7 +90,7 @@
                     </form>
                     <form class="form-inline" style="margin-top: 5px">
                         <div class="form-group">
-                            <label for="auto2">CPU threshold for shrinking worker pool:</label>
+                            <label for="auto2">CPU threshold shrinking worker pool:</label>
                             <select class="form-control" id="auto2" name="cpu-shrink" disabled>
                                 <option value="5">5%</option>
                                 <option value="10">10%</option>
@@ -107,7 +106,7 @@
                     </form>
                     <form class="form-inline" style="margin-top: 5px">
                         <div class="form-group">
-                            <label for="auto3">Ratio by which to expand the worker pool:</label>
+                            <label for="auto3">Ratio to expand the worker pool:</label>
                             <select class="form-control" id="auto3" name="ratio-expand" disabled>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -117,7 +116,7 @@
                     </form>
                     <form class="form-inline" style="margin-top: 5px">
                         <div class="form-group">
-                            <label for="auto4">Ratio by which to shrink the worker pool:</label>
+                            <label for="auto4">Ratio to shrink the worker pool:</label>
                             <select class="form-control" id="auto4" name="ratio-shrink" disabled>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -128,12 +127,45 @@
                 </div>
             </div>
             <form action="{{ url_for('delete_all_images') }}" method='post' onsubmit='return confirm("Are you sure?")'>
-                <input type="submit" class="btn btn-warning btn-block" value="Delete all user images">
+                <input style="margin-bottom: 50px" type="submit" class="btn btn-warning btn-block"
+                       value="Delete all user images">
             </form>
         </div>
-        <div class="col-md-9">
+        <div class="col-lg-8">
             {% for i in range(cpu_stats|length) %}
-                <div id="cpu_plot{{ i }}" class="col-md-6" style="height:250px;"></div>
+                <div class="row" style="margin-bottom: 20px">
+                    <div id="cpu_plot{{ i }}" class="col-sm-7" style="height: 196px"></div>
+                    <div class="col-sm-5" style="padding: 5px">
+                        <table class="table table-bordered table-hover table-responsive" style="margin: 0">
+                            <tbody>
+                            <tr class="info">
+                                <td>ID</td>
+                                <td> {{ instances[i].id }}</td>
+                            </tr>
+                            <tr class="warning">
+                                <td>Name Tag</td>
+                                <td> {{ instances[i].tags[0]['Value'] }}</td>
+                            </tr>
+                            <tr class="success">
+                                <td>State</td>
+                                <td>{{ instances[i].state['Name'] }}</td>
+                            </tr>
+                            <tr class="danger">
+                                <td>Public IP Address</td>
+                                <td>{{ instances[i].public_ip_address }}</td>
+                            </tr>
+                            <tr>
+                                <td>CPU Utilization</td>
+                                {% if cpu_stats[i]|length > 0 %}
+                                    <td>{{ cpu_stats[i][-1][1] }}%</td>
+                                {% else %}
+                                    <td>counting</td>
+                                {% endif %}
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             {% endfor %}
         </div>
     </div>
