--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <button class="btn btn-primary navbar-btn" onclick="window.history.back()">Back</button>
             <ul class="nav navbar-nav navbar-right">
-                <li><p class="navbar-text"><span class="glyphicon glyphicon-user"></span> {{ user_name }} </p></li>
+                <li><a><span class="glyphicon glyphicon-user"></span> {{ user_name }} </a></li>
                 <li><a href="{{ url_for('logout') }}"><span class="glyphicon glyphicon-log-in"></span> Log out </a></li>
             </ul>
         </div>
