--- a/master_app/templates/admin.html
+++ b/master_app/templates/admin.html
@@ -85,6 +85,7 @@
                                 <option value="40">40%</option>
                                 <option value="30">30%</option>
                                 <option value="20">20%</option>
+                                <option value="10">10%</option>
                             </select>
                         </div>
                     </form>
